--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon index.js",
-    "build": "npm i"
+    "start": "nodemon index.js"
+    
   },
   "keywords": [],
   "author": "",
